# nanoCoPaw

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING_zh.md  LICENSE  README.md  README_zh.md  SECURITY.md  nanocopaw.py  nanocopaw.spec  pyproject.toml
src/copaw/: __main__.py  constant.py  launcher.py
src/copaw/agents/: __init__.py  llm_client.py  minimal_agent.py  model_factory.py  skill_generator.py  skill_manager.py
src/copaw/agents/utils/: __init__.py  tool_message_utils.py
src/copaw/app/channels/: base.py  manager.py  registry.py  renderer.py  schema.py
src/copaw/app/channels/dingtalk/: channel.py  content_utils.py  handler.py
src/copaw/app/channels/discord_/: channel.py
src/copaw/app/channels/feishu/: channel.py
src/copaw/app/channels/imessage/: channel.py
src/copaw/app/channels/qq/: channel.py
src/copaw/app/runner/: __init__.py  chat_storage.py  runner.py  schemas.py  session.py
src/copaw/config/: __init__.py  config.py  utils.py
src/copaw/providers/: __init__.py  models.py  registry.py  store.py
src/copaw/skills/command/: SKILL.md  impl.py
src/copaw/skills/filesystem/: SKILL.md  impl.py
src/copaw/skills/network/: SKILL.md  impl.py
src/copaw/skills/python/: SKILL.md  impl.py
